# depot-manager-backend

./: .gitignore  Dockerfile  LICENSE  Readme.md  config.yaml  pyproject.toml  setup.cfg
.github/workflows/: publish_docker.yml
depot_server/: config.yaml
depot_server/api/: __init__.py  auth.py  bays.py  device.py  item_history.py  items.py  pictures.py  report_elements.py  report_profiles.py  reservations.py  users.py
depot_server/config/: __init__.py  base.py  config.py
depot_server/db/: __init__.py  collection.py  collections.py  connection.py  migrate.py
depot_server/db/migration/: __init__.py  migration_0_reservation_item.py
depot_server/db/model/: __init__.py  base.py  bay.py  item.py  item_reservation.py  item_state.py  migration.py  report_element.py  report_profile.py  reservation.py
depot_server/helper/: auth.py  util.py
depot_server/mail/: mailer.py  manager_item_problem.py  reservation_item_removed.py  return_reservation_mail.py
depot_server/mail/mail_templates/en_us/: manager_item_problem.html  manager_item_problem.txt  reservation_changed.html  reservation_changed.txt  reservation_item_removed.html  reservation_item_removed.txt  return_reservation_reminder.html  return_reservation_reminder.txt
depot_server/model/: __init__.py  base.py  bay.py  device_reservation.py  item.py  item_state.py  picture.py  report_element.py  report_profile.py  reservation.py  user.py
tests/: conftest.py  db_helper.py  mock_auth.py  motor_mock.py  test_bays.py  test_items.py  test_report.py  test_reservations.py
