[tool.poetry]
name = "depot-server"
version = "0.1.0"
description = ""
authors = ["Lukas Voegtle <lukas@infornautik.de>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.5"
fastapi = "^0.55"
motor = "^2.1.0"
oyaml = "^0.9"
authlib = "^0.14.3"
pytz = "^2020.1"
uvicorn = "^0.11.5"
httpx = "^0.13.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-mypy = "^0.6.2"
pytest-flake8 = "^1.0.6"
requests = "^2.23.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
