[tool.poetry]
name = "depot-server"
version = "0.1.0"
description = ""
authors = ["Lukas Voegtle <lukas@infornautik.de>"]

[tool.poetry.dependencies]
python = ">=3.8"
pydantic = ">=1.5"
fastapi = ">=0"
motor = ">=2"
oyaml = ">=1"
authlib = ">=0"
pytz = ">=2021"
uvicorn = ">=0"
httpx = ">=0"
mako = ">=1"
aiosmtplib = ">=1"
python-multipart = ">=0"
pillow = ">=8"

[tool.poetry.dev-dependencies]
pytest = ">=6"
pytest-mypy = ">=0"
pytest-flake8 = ">=1"
requests = ">=2"
mongomock = ">=3"
types-pytz = ">=2021"
types-requests = ">=2"

[tool.poetry.scripts]
migrate = "depot_server.db.migrate:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
